ERD uuendamine, Swaggeri lehe loomine
